--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
+  flutter_secure_storage: ^5.0.2
+  sqflite: ^2.0.2
+  path_provider: ^2.0.8
+  sqflite_common_ffi:
+  path_provider_foundation:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
