--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  shared_preferences: ^2.2.2
+  flutter_colorpicker: ^0.5.0
+  image_picker: ^0.8.4+4
   flutter_secure_storage: ^5.0.2
   sqflite: ^2.0.2
   path_provider: ^2.0.8
