--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,17 +30,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  sqflite: ^2.0.2
+  sqflite_common_ffi:
   shared_preferences: ^2.2.2
   flutter_colorpicker: ^0.5.0
   image_picker: ^0.8.4+4
   flutter_secure_storage: ^5.0.2
-  sqflite: ^2.0.2
   path_provider: ^2.0.8
-  sqflite_common_ffi:
   path_provider_foundation:
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_speed_dial: ^7.0.0
 
 dev_dependencies:
   flutter_test:
